refactor: migrate to tinygo wasm export directives
- Replace syscall/js approach with //go:wasmexport directives for WASM exports
- Simplifying build process and removing transform scripts
- Update entry points for node, web, and ESM environments, and add comprehensive Go tests with golden file validation

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,10 @@
 # Auto detect text files and perform LF normalization
 * text=auto eol=lf
 
-extra/** -linguist-detectable
+*.js -linguist-detectable
+*.ts -linguist-detectable
+*.mjs -linguist-detectable
+*.sh -linguist-detectable
+
 scripts/** -linguist-detectable
 test_*/** -linguist-detectable
