--- a/package.json
+++ b/package.json
@@ -23,18 +23,37 @@
 	"exports": {
 		".": {
 			"types": "./shfmt_entry.d.ts",
+			"webpack": "./shfmt_bundle.js",
 			"node": "./shfmt_node.js",
+			"default": "./shfmt_esm.js"
+		},
+		"./esm": {
+			"types": "./shfmt_entry.d.ts",
+			"default": "./shfmt_esm.js"
+		},
+		"./node": {
+			"types": "./shfmt_entry.d.ts",
+			"default": "./shfmt_node.js"
+		},
+		"./bundler": {
+			"types": "./shfmt_entry.d.ts",
+			"default": "./shfmt_bundle.js"
+		},
+		"./web": {
+			"types": "./shfmt_web.d.ts",
 			"default": "./shfmt_web.js"
 		},
 		"./vite": {
-			"types": "./shfmt_entry.d.ts",
+			"types": "./shfmt_web.d.ts",
 			"default": "./shfmt_vite.js"
 		},
+		"./wasm": "./shfmt.wasm",
 		"./package.json": "./package.json",
 		"./*": "./*"
 	},
 	"scripts": {
 		"build": "./scripts/build.sh",
+		"fmt": "dprint fmt",
 		"test:go": "go test -C src -v",
 		"test:node": "node --test test_node/shfmt.test.js",
 		"test:deno": "deno test test_deno --allow-read",
