chore: improve test and CICD scripts

--- a/package.json
+++ b/package.json
@@ -53,12 +53,13 @@
 		"./*": "./*"
 	},
 	"scripts": {
-		"build": "./scripts/build.sh",
+		"build": "tinygo build -o=shfmt.wasm -target=wasm-unknown -no-debug ./src/lib.go",
 		"fmt": "dprint fmt",
 		"test:go": "go test -C src -v",
 		"test:node": "node --test test_node/shfmt.test.js",
 		"test:deno": "deno test test_deno --allow-read",
-		"test:bun": "bun test test_bun"
+		"test:bun": "bun test test_bun",
+		"version": "node ./scripts/sync_version.js && git add ."
 	},
 	"engines": {
 		"node": ">=16.17.0"
